<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/text_view1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#4CED11"
        android:gravity="center"
        android:text="@string/tv_1"
        android:textColor="#131313"
        android:textSize="25dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:text="@string/tv_3"
        android:textSize="20sp" />


    <EditText
        android:id="@+id/txtName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/rounded"
        android:gravity="center"
        android:hint="@string/text_name1" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:text="@string/tv_4"
        android:textSize="20sp" />


    <EditText
        android:id="@+id/txtAvailability"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/rounded"
        android:gravity="center"
        android:hint="@string/text_name2" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:text="@string/tv_5"
        android:textSize="20sp" />


    <EditText
        android:id="@+id/txtPrice"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/rounded"
        android:gravity="center"
        android:hint="@string/text_name3" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:text="@string/tv_6"
        android:textSize="20sp" />


    <EditText
        android:id="@+id/txtImageUrl"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/rounded"
        android:gravity="center"
        android:hint="@string/text_name4" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/rounded"
        android:gravity="center"
        android:text="@string/btn_3"
        android:textAllCaps="false"
        android:textColor="#455A64" />
</LinearLayout>






