<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/text_view2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#4CED11"
        android:gravity="center"
        android:text="@string/tv_2"
        android:textColor="@color/white"
        android:textSize="25dp"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:text="@string/tv_7"
        android:textSize="20sp" />


    <EditText
        android:id="@+id/txtName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/rounded"
        android:gravity="center"
        android:hint="@string/text_name8" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:text="@string/tv_8"
        android:textSize="20sp" />


    <EditText
        android:id="@+id/txtAvailability"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/rounded"
        android:gravity="center"
        android:hint="@string/text_name9" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:text="@string/tv_9"
        android:textSize="20sp" />


    <EditText
        android:id="@+id/txtPrice"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/rounded"
        android:gravity="center"
        android:hint="@string/text_name10" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:text="@string/tv_10"
        android:textSize="20sp" />


    <EditText
        android:id="@+id/txtImageUrl"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/rounded"
        android:gravity="center"
        android:hint="@string/text_name11" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/rounded"
        android:gravity="center"
        android:text="@string/btn_4"
        android:textAllCaps="false"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="25dp"
        android:backgroundTint="@color/material_on_surface_stroke"
        android:gravity="center"
        android:text="@string/btn_5"
        android:textAllCaps="false"

        android:textColor="@color/black" />
</LinearLayout>