<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/my_bg1"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="6dp"
    android:elevation="6dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@mipmap/ic_launcher"
            app:civ_border_color="#FF000000"
            app:civ_border_width="3dp" />


        <TextView
            android:id="@+id/nametext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/img1"
            android:text="@string/text_name5"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/coursetext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/nametext"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/img1"
            android:text="@string/text_name6"
            android:textColor="@color/black"
            android:textSize="25sp" />


        <TextView
            android:id="@+id/emailtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/coursetext"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/img1"
            android:text="@string/text_name7"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_below="@id/emailtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnEdit"
                android:layout_width="173dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/btn_1"
                android:textAllCaps="false"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btnDelete"
                android:layout_width="173dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:backgroundTint="@color/material_on_surface_stroke"
                android:text="@string/btn_2"
                android:textAllCaps="false"
                android:textColor="@color/black" />

        </LinearLayout>

    </RelativeLayout>
</androidx.cardview.widget.CardView>